@@ -7,6 +7,8 @@ Changelog
 * Upgrade step: Within "Plone > Site setup > Add-ons" click on
   upgrade button available for eea.daviz
   [voineali #4866]
+* Feature: Redirects to daviz-edit if there is no DaViz view/chart configured
+  [voineali #4882]
 * Feature: Added a way to register additional charts as tabs in view mode.
   [voineali #4873]
 * Feature: Added DavizPresentation content-type in order to easy aggregate
